--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,13 @@ html {
     background-color: #010102;
 }
 
-p, h1, h2, a {
+body {
+    margin: auto;
+    max-width: 1200px;
+    width: 85%;
+}
+
+p, h1, h2, a, figure {
     color: white;
     font-family: 'Libre Franklin', sans-serif;
 }
@@ -19,10 +25,25 @@ ul {
 
 .top {
     display: flex;
+    justify-content: space-between;
+    padding: 50px 20px 20px;
 }
 
 .nav {
     display: flex;
+    gap: 25px;
+    align-items: center;
+    font-size: 20px;
+}
+
+.nav a {
+    padding: 10px;
+    background-color: #262222;
+}
+
+.nav a:hover {
+    background-color: #b0a6a6;
+    color: #010102;
 }
 
 .top-sign {
@@ -31,14 +52,76 @@ ul {
 }
 
 .avicii_quote {
-    font-size: 38px;
+    font-size: 62px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: revert;
 }
 
-.avicii_stature {
-    /*width: 600px;*/
-    /*float: right;*/
-
-    width: 66vw;
-    position: fixed;
-    transform: translate(-12%, -50%);
+.avicii_quote blockquote, .avicii_quote blockquote p {
+    padding: 0;
+    margin: 0;
 }
+
+.avicii_quote figcaption {
+    font-size: 45px;
+    margin-top: 25px;
+}
+
+.rip-sign {
+    text-align: center;
+    font-size: 28px;
+    text-transform: uppercase;
+    padding: 0;
+    letter-spacing: 4px;
+}
+
+.first-view {
+    background: url(../assets/images/avicii-stature4.png) no-repeat;
+    background-position-x: right;
+    background-position-y: bottom;
+    background-size: contain;
+    /*padding-top: 158px;*/
+
+    position: absolute;
+    bottom: 20px;
+    z-index: -1;
+    max-width: 1200px;
+    width: 85%;
+}
+
+.second-view {
+    padding-top: 100vh;
+}
+
+.artists__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    text-align: justify;
+}
+
+.artists__header {
+    font-size: 37px;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.artist__wrapper {
+    max-width: 90%;
+    display: flex;
+    margin: auto;
+}
+
+.artist__wrapper blockquote {
+    margin: 0;
+}
+
+.artist__wrapper figure {
+    max-width: 85%;
+}
+
+.artist__wrapper:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
