--- a/styles/default.css
+++ b/styles/default.css
@@ -25,7 +25,7 @@ body {
     margin: 0;
 }
 
-p, h1, h2, a, figure, li, button {
+p, h1, h2, h3, a, figure, li, button, label {
     color: white;
     font-family: 'Libre Franklin', sans-serif;
 }
