--- a/styles/default.css
+++ b/styles/default.css
@@ -17,6 +17,19 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+::-webkit-scrollbar {
+    background-color: #202324;
+    color: #aba499;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: #181a1b;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #454a4d;
+}
+
 html {
     background-color: #010102;
 }
@@ -32,6 +45,12 @@ p, h1, h2, h3, a, figure, li, button, label {
 
 a {
     text-decoration: none;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2.6em;
+    padding-bottom: 35px;
 }
 
 ul {
@@ -52,7 +71,7 @@ ul {
     position: fixed;
     width: 100%;
     height: 140px;
-    background: #0000 url(../assets/waves/wave10.png) no-repeat;
+    background: #0000 url(../assets/waves/wave2.png) no-repeat;
     background-size: 100% 100%;
 }
 
@@ -65,17 +84,23 @@ ul {
 
 .nav a {
     padding: 10px;
-    color: #ffffffcc;
+    color: #ffffff;
 }
 
 .nav a:hover {
-    color: #ffffff;
     font-weight: bold;
+}
+
+.link__used-res {
+    text-decoration: underline;
+}
+
+.link__used-res:hover {
+    text-decoration: none;
 }
 
 .top__sign {
     width: 170px;
-
 }
 
 .top, footer .footer {
@@ -86,6 +111,9 @@ ul {
     right: 0;
 }
 
+.first-view {
+    padding-top: 140px;
+}
 
 footer {
     background: #464648 url(../assets/waves/wave0.png) no-repeat;
@@ -95,6 +123,7 @@ footer {
     position: inherit;
     bottom: 0;
     width: 100%;
+    height: 240px;
 }
 
 .footer__links ul {
@@ -118,9 +147,113 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 13px;
+    padding-top: 22px;
 }
 
 .footer__second img {
     width: 30px;
+}
+
+.nav .active {
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.nav .active:hover {
+    color: #ffffffcc;
+    font-weight: normal;
+}
+
+
+/** nav dropdown */
+
+.nav__dropdown {
+    display: none;
+}
+
+.nav__dropdown-img {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    filter: invert(1);
+    margin: 10px;
+}
+
+.nav__dropdown-content {
+    border: 1px solid white;
+}
+
+.nav__dropdown-content li {
+    padding: 10px;
+    border-radius: 2px;
+}
+
+.nav__dropdown-content li:nth-child(1) {
+    background-color: #707070;
+}
+
+.nav__dropdown-content li:nth-child(2) {
+    background-color: #464648;
+}
+
+.nav__dropdown-content li:nth-child(3) {
+    background-color: #2a2a2b;
+}
+
+.nav__dropdown-content li:nth-child(4) {
+    background-color: #131314;
+}
+
+.nav__dropdown-content a:hover {
+    text-decoration: underline;
+}
+
+@media only screen and (max-width: 870px) {
+    .nav {
+        font-size: 16px;
+    }
+
+    .top__sign {
+        width: 110px;
+    }
+}
+
+@media only screen and (max-width: 670px) {
+    .nav__dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .nav__dropdown-content {
+        display: none;
+        position: absolute;
+        z-index: 1;
+    }
+
+    .nav__dropdown-content a {
+        display: block;
+        font-size: 20px;
+
+    }
+
+    .nav__dropdown:hover .nav__dropdown-content {
+        display: block;
+        right: 0;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    footer {
+        font-size: 15px;
+    }
+}
+
+/** */
+
+@media only screen and (max-width: 670px) {
+    h1 {
+        font-size: 2.1em;
+    }
 }
